# Habit

./: .gitignore  README.md  database.py  get_progress.py  google_docs.py  main.py  models.py  pyproject.toml  startup_sync.sh  test.py
scripts/: activate_env.sh  agent_scripts.sh  startup_sync.sh
